src/test/ui/issues/issue-37026.stderr
error[E0308]: mismatched types
  --> $DIR/issue-37026.rs:6:9
   |
LL |     let empty_struct::XEmpty2 = ();
   |         ^^^^^^^^^^^^^^^^^^^^^ expected (), found struct `empty_struct::XEmpty2`
   |
   = note: expected type `()`
              found type `empty_struct::XEmpty2`

error[E0308]: mismatched types
  --> $DIR/issue-37026.rs:7:9
   |
LL |     let empty_struct::XEmpty6(..) = ();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ expected (), found struct `empty_struct::XEmpty6`
   |
   = note: expected type `()`
              found type `empty_struct::XEmpty6`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
